@@ -154,6 +154,8 @@ OCamldoc:
   (Maxence Guesdon, report by Anil Madhavapeddy)
 
 Bug fixes:
+- PR#2719: wrong scheduling of bound checks within a 
+  try...with Invalid_argument -> _ ...  (Xavier Leroy)
 - PR#6232: Don't use [mktemp] on platforms where [mkstemp] is available
   (Stéphane Glondu, Mark Shinwell)
 - PR#6439: Don't use the deprecated [getpagesize] function
